resources/stylesheets/base.css
/* ... */
.used-by-logos { text-align: center; white-space: nowrap; } 
.used-by-logos img { margin: 10px 10px;}
.between-dark-strips { background: url('{{ site.baseurl }}/resources/images/between-dark-strips-bg.gif') repeat-x; height: 3px; margin-bottom: 20px; }
.three-bars { padding-bottom: 30px; }
.three-bars h2 { font-family: 'Exo', sans-serif; font-size: 28px; font-weight: 400; color: #595959; text-shadow:0 1px 0 #ffffff; line-height: 30px; margin-bottom: 8px; }
.three-bars h2 a { color: #595959; }
.three-bars h2 a:hover { color: #73a600; text-decoration: none; }
.tweets { position: relative; }
.tweet { position: relative; }
.tweets img { margin-left: -14px; }
.tweet .text { background: rgba(0, 26, 30, 0.7); color: rgba(255, 255, 255, 1); text-shadow: rgba(0, 0, 0, 1) 0px 1px 0px; padding: 10px; margin-bottom: 5px; line-height: 1.2em; word-wrap: break-word !important; display: block; -webkit-box-shadow: rgba(255,255,255,.5) -1px -1px 0px; -moz-box-shadow: rgba(255,255,255,.5) -1px -1px 0px; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
.tweet .text a { color: #a4cc47; }
.tweet .text a:hover { color: #8ad3e5; text-decoration: none;}
.username { position: relative; top: -20px; left: 30px; color: #888;}
.username a { color: #235561; font-weight: bold; text-decoration: none; }
.username a:hover { color: #4ba11d; }
.time { display: block; position: relative; line-height: 0px; top: -16px; left: 64px; font-size: 80%; }
.time a { color: #888; white-space: nowrap; text-decoration: none; }
.triangle { position: relative; bottom: 9px; left: 40px; height: 0px; width: 1px; margin-left: auto; margin-right: auto; border-top: 16px solid rgba(0, 30, 30, 0.7); border-left: none; border-right: 16px solid transparent; border-bottom: none; }
.feed-entries { margin-left: 0px; }
.feed-date { float: left; margin-right: 14px; height: 140px;}
.feed-month { color: #447281; font-size: 18px; font-weight: bold; text-transform:uppercase;}
.feed-day { background: #73a600; -webkit-border-radius: 6px; -moz-border-radius: 6px; border-radius: 6px; color: #dfdfd9; font-weight: bold; font-size: 24px; text-align: center; line-height: 26px;}
.feed-year { color: #447281; font-size: 16px; font-weight: bold; }
.feed-title { font-family: 'Exo', sans-serif; font-size: 18px; font-weight: 400; line-height: 20px; }
.feed-title a { color: #689700; /*text-shadow:1px 1px 0 rgba(255, 255, 255, 0.6)*/ }
.feed-title a:hover { color: #447281; text-decoration: none; }
.feed-author { font-size: 11px; color: #888888;}
.feed-body { margin-bottom: 14px;}
.news-item { margin-bottom: 14px;}
.news-date { display: inline; font-family: 'Exo', sans-serif; font-size: 14px; font-weight: 500; line-height: 16px; color: #73a600; }
.news-author { font-family: 'Exo', sans-serif; font-size: 12px; font-weight: 500; line-height: 15px; color: #447281; }
.news-title { font-family: 'Exo', sans-serif; font-size: 18px; font-weight: 400; line-height: 20px; margin-bottom: 4px;}
.news-title a { color: #447281; /*text-shadow:1px 1px 0 rgba(255, 255, 255, 0.6)*/ }
.news-title a:hover { color: #73a600; text-decoration: none; }
.rss-icon { float: right; padding-right: 10px; }
.footer { padding-top: 15px; clear: both; background: url('{{ site.baseurl }}/resources/images/footer-bg.png') repeat-x; width: 100%; color: rgba(255, 255, 255, 0.6); text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3); }	
.footer ul { float: left; margin: 0; padding: 10px 2% 20px 0; -webkit-box-sizing: content-box; -moz-box-sizing: content-box; box-sizing: content-box; width: 22%; list-style: none; }
.footer a {text-decoration: none;color: rgba(255, 255, 255, 0.7);font-size: 12px;}
.footer a:hover {text-decoration: underline;}
.footer ul:last-child { padding-right: 0; }
.footer ul li a { text-decoration: none; color: rgba(255, 255, 255, 0.7); font-size: 12px; }
.footer ul li a:hover { text-decoration: underline; }
.footer ul li h5 { color: rgba(255, 255, 255, 0.8); text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5); margin-bottom: 10px; padding-bottom: 10px; line-height: 20px; border-bottom:1px solid rgba(103, 103, 103, 0.3); -webkit-box-shadow:0 1px 0 rgba(255, 255, 255, 0.5); -moz-box-shadow:0 1px 0 rgba(255, 255, 255, 0.5); box-shadow:0 1px 0 rgba(255, 255, 255, 0.5);	}
.footer ul li h5 a { font-size: 14px;opacity: 1;}
.footer .copyright { font-size: 12px; border-top:1px solid rgba(103, 103, 103, 0.5); clear: both; padding: 10px 0 20px; }
.footer .license { float: right; font-size: 12px; }

/*.navigation .breadcrumb { margin-bottom: 0px; }*/
a:hover.selected { color: red; }
.panel p { margin-bottom: 22px; }
.panel h2 { color: #326A78; text-shadow: 0 1px 0 rgba( 255, 255, 255, 0.8); font-family: 'Exo', sans-serif; font-size: 22px; font-weight: 400;}
.language-header { width: 940px;}
.scala-header {float: left; width: 460px;}
.java-header a {float: right; width: 480px; font-size: 16px; font-weight: bold; color: rgba(0, 0, 0, 0.6); text-shadow: 0 1px 0 white;} 
.java-header a:hover { text-decoration: none; color: #447281; }
#slider {
  margin: 0 auto;
  position: relative;
}

.breadcrumb li { }
.breadcrumb li a { padding-left: 80px; padding-right: 80px; font-family: 'Exo', sans-serif; font-size: 18px; font-weight: 400; color: #ffffff; text-shadow:0 2px 0 #000000; width: 150px; } 
.breadcrumb li a:hover { text-decoration: none; color: #ffffff; }
.selected-arrow { position: relative; background: url('{{ site.baseurl }}/resources/images/arrow.png') no-repeat; height: 18px; width: 32px; 
margin-top: -1px;
z-index: 10;
margin-left: 205px;}
/* ... */

